[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Character/Farmer/Farmer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/MainMenu/AvatarOutfitManager/AvatarOutfitManagerController.gd" type="Script" id=2]

[node name="AvatarOutfitManager" type="Control"]
margin_right = 544.0
margin_bottom = 301.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 1.0
margin_right = -25.0
margin_bottom = -25.0
split_offset = 10
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 127.0
margin_bottom = 275.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 127.0
margin_bottom = 275.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 127.0
margin_bottom = 14.0
text = "Outfit Options"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 127.0
margin_bottom = 22.0

[node name="Container" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 127.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Container"]
margin_right = 127.0
margin_bottom = 14.0
text = "Haircut"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Container"]
margin_top = 18.0
margin_right = 127.0
margin_bottom = 38.0

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Container/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
text = "<"

[node name="HaircutLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Container/HBoxContainer"]
margin_left = 24.0
margin_top = 3.0
margin_right = 91.0
margin_bottom = 17.0
text = "Haircut #1"

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Container/HBoxContainer"]
margin_left = 95.0
margin_right = 115.0
margin_bottom = 20.0
text = ">"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 127.0
margin_bottom = 72.0

[node name="Container2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 127.0
margin_bottom = 114.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Container2"]
margin_right = 127.0
margin_bottom = 14.0
text = "Tops"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Container2"]
margin_top = 18.0
margin_right = 127.0
margin_bottom = 38.0

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Container2/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
text = "<"

[node name="TopLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Container2/HBoxContainer"]
margin_left = 24.0
margin_top = 3.0
margin_right = 68.0
margin_bottom = 17.0
text = "Top #2"

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Container2/HBoxContainer"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 20.0
text = ">"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 127.0
margin_bottom = 122.0

[node name="Container3" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 127.0
margin_bottom = 164.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Container3"]
margin_right = 127.0
margin_bottom = 14.0
text = "Bottoms"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Container3"]
margin_top = 18.0
margin_right = 127.0
margin_bottom = 38.0

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Container3/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
text = "<"

[node name="BottomLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Container3/HBoxContainer"]
margin_left = 24.0
margin_top = 3.0
margin_right = 93.0
margin_bottom = 17.0
text = "Bottom #3"

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Container3/HBoxContainer"]
margin_left = 97.0
margin_right = 117.0
margin_bottom = 20.0
text = ">"

[node name="HSeparator5" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 127.0
margin_bottom = 172.0

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 127.0
margin_bottom = 196.0
text = "Save"

[node name="Container" type="CenterContainer" parent="PanelContainer"]
margin_left = 127.0
margin_right = 494.0
margin_bottom = 275.0

[node name="Farmer" parent="PanelContainer/Container" instance=ExtResource( 1 )]
position = Vector2( 159.234, 123.295 )
scale = Vector2( 6, 6 )

[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Container/HBoxContainer/Button" to="." method="shift_outfit_piece" binds= [ "hair", false ]]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Container/HBoxContainer/Button2" to="." method="shift_outfit_piece" binds= [ "hair", true ]]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Container2/HBoxContainer/Button" to="." method="shift_outfit_piece" binds= [ "top", false ]]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Container2/HBoxContainer/Button2" to="." method="shift_outfit_piece" binds= [ "top", true ]]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Container3/HBoxContainer/Button" to="." method="shift_outfit_piece" binds= [ "bottom", false ]]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Container3/HBoxContainer/Button2" to="." method="shift_outfit_piece" binds= [ "bottom", true ]]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="save_avatar"]
